<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:text="@string/project"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/any_updates"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/any_updates"
            android:textColorHint="@android:color/black"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/colorAccent"
            app:met_primaryColor="@android:color/black"
            app:met_underlineColor="@android:color/black" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/commentsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:fadeScrollbars="false"
                android:gravity="top|start"
                android:hint="@string/comments"
                android:imeOptions="actionNext"
                android:inputType="textImeMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:overScrollMode="always"
                android:scrollHorizontally="false"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/holo_red_light"
            android:elevation="4dp"
            android:shadowRadius="@android:integer/config_mediumAnimTime"
            android:text="@string/reset"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
