<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/total_fire_calls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/total_fire_calls"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/incidental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/incidental"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/non_incidental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/non_incidental"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/snake_calls"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/snake_calls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_indicator_color="@color/colorAccent"
            app:isb_indicator_text_color="@android:color/black"
            app:isb_indicator_text_size="18sp"
            app:isb_max="20"
            app:isb_min="0"
            app:isb_progress="0"
            app:isb_seek_smoothly="true"
            app:isb_show_indicator="circular_bubble"
            app:isb_show_tick_marks_type="oval"
            app:isb_show_tick_texts="true"
            app:isb_thumb_color="@color/colorAccent"
            app:isb_thumb_size="20dp"
            app:isb_tick_marks_size="13dp"
            app:isb_tick_texts_color="@android:color/black"
            app:isb_tick_texts_size="15sp"
            app:isb_ticks_count="1"
            app:isb_track_background_color="@color/colorAccent"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/colorAccent"
            app:isb_track_progress_size="4dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:gravity="top|start"
                android:hint="@string/remarks"
                android:imeOptions="actionDone"
                android:inputType="textImeMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:scaleType="centerInside" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/choose_image"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@android:color/holo_green_light"
            android:elevation="4dp"
            android:shadowRadius="@android:integer/config_mediumAnimTime"
            android:text="@string/choose_image"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/holo_red_light"
            android:elevation="4dp"
            android:shadowRadius="@android:integer/config_mediumAnimTime"
            android:text="@string/reset"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
